# rc5_test

./: .gitignore  Cargo.toml
crates/rc5-core/: Cargo.toml
crates/rc5-core/src/: algs.rs  lib.rs  std_words.rs  strange_words.rs  tests.rs  traits.rs  words.rs
crates/rc5-core/src/algs/: key_table.rs
crates/rc5-core/src/tests/: rivest97.rs  rivest97_strange_arithmetic.rs  strange_arithmetic.rs
crates/rc5-core/src/traits/: tests.rs
crates/rc5-original-api/: Cargo.toml
crates/rc5-original-api/src/: lib.rs
crates/rc5-rustcrypto-api/: Cargo.toml
crates/rc5-rustcrypto-api/src/: lib.rs  rc5.rs  tests.rs
crates/rc5-rustcrypto-api/src/rc5/: cipher_traits.rs
crates/rc5-rustcrypto-api/src/tests/: common.rs  krovetz18.rs  nessie.rs  rivest97.rs
crates/rc5-rustcrypto-api/src/tests/nessie/: Rc5-128-64.verified.test-vectors  cases.awk
crates/rc5_test/: Cargo.toml
crates/rc5_test/src/: lib.rs  tests.rs
src/: lib.rs
