[package]
name = "rc5-rustcrypto-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cipher = {workspace = true}
generic-array = {workspace = true}
typenum = {workspace = true}

rc5-core = {workspace = true}

[dev-dependencies]
hex = {workspace = true}
